--- a/main.css
+++ b/main.css
@@ -144,14 +144,14 @@ h3 {
 
 figure p {
   position: absolute;
-  right: 15%;
-  top: 2%;
+  right: 10%;
+  top: 0;
   font-size: 3vw;
-  transform: rotate(90deg);
+  /* transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -webkit-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
+  -o-transform: rotate(90deg); */
   line-height: 15px;
   height: 15px;
   width: 15px;
@@ -160,6 +160,8 @@ figure p {
   font-family: 'PT Serif', serif;
   font-weight: 400;
   text-transform: uppercase;
+  writing-mode: vertical-lr;
+  margin-top: 15px;
 }
 
 footer {
